--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -9,54 +9,21 @@ jobs:
   auto-approve-pr:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request_target'
-    permissions:
-      pull-requests: write
-      issues: write
+    permissions: write-all
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ github.token }}
       - uses: hmarr/auto-approve-action@v4
         with:
-          github-token: "${{ secrets.APPROVE_PR_GITHUB_TOKEN }}"
+          github-token: "${{ github.token }}"
       - name: Add label
         run: gh pr edit ${{ github.event.pull_request.number }} --add-label automerge
         env:
-          GH_TOKEN: ${{ secrets.APPROVE_PR_GITHUB_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
       - uses: pascalgn/automerge-action@v0.16.2
         env:
-          GITHUB_TOKEN: "${{ secrets.APPROVE_PR_GITHUB_TOKEN }}"
-          MERGE_LABELS: "automerge"
-          MERGE_RETRIES: "60"
-          MERGE_RETRY_SLEEP: "10000"
-          MERGE_METHOD: "squash"
-          MERGE_DELETE_BRANCH: "true"
-          
-  auto-approve-comment:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'issue_comment' && github.event.issue.pull_request != '' && contains(github.event.comment.body, '/recheck')
-    permissions:
-      pull-requests: write
-      issues: write
-    steps:
-      - uses: actions/checkout@v4
-      - name: Ensure jq is installed
-        run: |
-          if ! command -v jq &> /dev/null
-          then
-            sudo apt-get update && sudo apt-get install -y jq
-          fi
-      - name: Get PR number
-        run: echo "PR_NUMBER=$(jq --raw-output .issue.number "$GITHUB_EVENT_PATH")" >> $GITHUB_ENV
-      - uses: hmarr/auto-approve-action@v4
-        with:
-          github-token: "${{ secrets.APPROVE_PR_GITHUB_TOKEN }}"
-          pull-request-number: "${{ env.PR_NUMBER }}"
-      - name: Add label
-        run: gh pr edit ${{ env.PR_NUMBER }} --add-label automerge
-        env:
-          GH_TOKEN: ${{ secrets.APPROVE_PR_GITHUB_TOKEN }}
-      - uses: pascalgn/automerge-action@v0.16.2
-        env:
-          GITHUB_TOKEN: "${{ secrets.APPROVE_PR_GITHUB_TOKEN }}"
+          GITHUB_TOKEN: "${{ github.token }}"
           MERGE_LABELS: "automerge"
           MERGE_RETRIES: "60"
           MERGE_RETRY_SLEEP: "10000"
