--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -29,3 +29,4 @@ jobs:
           MERGE_RETRY_SLEEP: "10000"
           MERGE_METHOD: "squash"
           MERGE_DELETE_BRANCH: "true"
+          MERGE_COMMIT_MESSAGE: "{pullRequest.title} \n\n workflowId: {pullRequest.head.ref}"
