--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "y18n": "^5.0.8"
+    "y18n": "^5.0.8",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,5 +17,17 @@
     "eject": "react-scripts eject",
     "install-types": "echo Mock stage install-types",
     "flow:check": "node node_modules/flow-bin/cli.js check"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
